[gd_scene load_steps=35 format=3 uid="uid://blor36s6vy1rx"]

[ext_resource type="Script" uid="uid://bje8g1kau73ee" path="res://scripts/parallax_background_canvas.gd" id="1_0rucn"]
[ext_resource type="Texture2D" uid="uid://ccw2ymttb6km6" path="res://assets/bg/traing_bg.png" id="1_emgrw"]
[ext_resource type="Script" uid="uid://dwwn41o2x3u1m" path="res://scripts/canvas_makomi_INTRO.gd" id="1_l3uwg"]
[ext_resource type="PackedScene" uid="uid://dbu3nhjymm7wd" path="res://addons/dialogue_manager/example_balloon/example_balloon.tscn" id="2_tncq5"]
[ext_resource type="Texture2D" uid="uid://css3w40ytq5h3" path="res://assets/bg/star_a.png" id="2_vjdvf"]
[ext_resource type="Texture2D" uid="uid://cl5ae4kovm10b" path="res://assets/ui/canvas.png" id="4_tre8k"]
[ext_resource type="Theme" uid="uid://ba4s4eln16e7s" path="res://assets/styles/button.tres" id="5_iev8n"]
[ext_resource type="Script" uid="uid://cdfdrwynmvpjn" path="res://scripts/painter_image.gd" id="5_jxhjo"]
[ext_resource type="Texture2D" uid="uid://cywg53trb47id" path="res://assets/ui/dialogue_box-nameinput.png" id="6_jxhjo"]
[ext_resource type="Texture2D" uid="uid://c6p7xunmgl2r4" path="res://assets/ui/dialogue_box_face.png" id="8_bbk8y"]
[ext_resource type="Script" uid="uid://1phhfmqg50c0" path="res://scripts/help.gd" id="9_1ubji"]
[ext_resource type="Script" uid="uid://bqfrpac0qqy4p" path="res://scripts/colors_paint.gd" id="9_60gon"]
[ext_resource type="AudioStream" uid="uid://dw6tqnd4olfyq" path="res://music/continue.ogg" id="11_uqbd1"]
[ext_resource type="Shader" uid="uid://bjx20ff3hipra" path="res://assets/styles/paint.gdshader" id="12_ofuo6"]
[ext_resource type="Script" uid="uid://bwm2nhbqtqvny" path="res://scripts/clear.gd" id="14_673gn"]
[ext_resource type="Texture2D" uid="uid://defumxyqn643y" path="res://assets/ui/ShiftKey.png" id="15_1yep8"]
[ext_resource type="AudioStream" uid="uid://chvfq8l1y84ph" path="res://music/sfx/BA_INK.ogg" id="16_tncq5"]
[ext_resource type="AudioStream" uid="uid://dpjggo5cdsq76" path="res://music/sfx/SE_chalk_short.ogg" id="18_rgpq6"]
[ext_resource type="AudioStream" uid="uid://fflxkb71q363" path="res://music/sfx/SE_chalk.ogg" id="19_bgm10"]
[ext_resource type="AudioStream" uid="uid://cpyevaddneq68" path="res://music/sfx/se_stupid.ogg" id="20_jtvaj"]
[ext_resource type="Script" uid="uid://c8kmlerc2g5ft" path="res://scenes/music_manager_canvas.gd" id="21_joooq"]
[ext_resource type="AudioStream" uid="uid://8g610kgsb8oq" path="res://music/sfx/BA_Level_Up.ogg" id="21_kd7kd"]
[ext_resource type="AudioStream" uid="uid://dg1ov6cf6hjs5" path="res://music/sfx/SE_chirp.ogg" id="21_ur4fy"]
[ext_resource type="AudioStream" uid="uid://i8ipccllfdoi" path="res://music/sfx/BA_happy_level_2.ogg" id="22_pvt6a"]
[ext_resource type="AudioStream" uid="uid://g1j2o88hyi74" path="res://music/sfx/se_ticking_warning.mp3" id="23_pvt6a"]
[ext_resource type="AudioStream" uid="uid://c55vmxwug385y" path="res://music/sfx/se_time.mp3" id="23_y51fs"]
[ext_resource type="AudioStream" uid="uid://8caat0fm8jit" path="res://music/ow_outskirts.ogg" id="26_1yep8"]
[ext_resource type="AudioStream" uid="uid://7d2vva72h70b" path="res://music/ow_junkyard.ogg" id="27_7wpjm"]
[ext_resource type="AudioStream" uid="uid://3gkp6tu0hqe4" path="res://music/ow_town.ogg" id="27_y51fs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uqbd1"]
texture = ExtResource("8_bbk8y")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l3uwg"]
shader = ExtResource("12_ofuo6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bbk8y"]
texture = ExtResource("6_jxhjo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_60gon"]
texture = ExtResource("6_jxhjo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_juvvh"]
texture = ExtResource("6_jxhjo")

[node name="Screen" type="Control"]
layout_mode = 3
anchor_left = 0.010000001
anchor_top = 0.054
anchor_right = 1.0250001
anchor_bottom = 1.312
offset_left = -11.52
offset_top = -34.992
offset_right = 0.19995117
offset_bottom = -0.17602539
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3uwg")

[node name="Makomi_Dialogue" type="CanvasLayer" parent="."]

[node name="ExampleBalloon" parent="Makomi_Dialogue" instance=ExtResource("2_tncq5")]
visible = false

[node name="MainBackground" type="CanvasLayer" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="MainBackground"]
z_index = -3
position = Vector2(289, 189.62503)
scale = Vector2(2.0375001, 2.1642854)
texture = ExtResource("1_emgrw")

[node name="CanvasModulate" type="CanvasModulate" parent="MainBackground/Sprite2D2"]
color = Color(0.8605873, 0.7714949, 0.8039122, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 1000
script = ExtResource("1_0rucn")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(800, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(277.99997, 180.00002)
scale = Vector2(0.4965787, 0.5251889)
texture = ExtResource("2_vjdvf")

[node name="Canvas" type="CanvasLayer" parent="."]
layer = 2000

[node name="CANVAS" type="Sprite2D" parent="Canvas"]
position = Vector2(335, 273)
scale = Vector2(0.2215, 0.20515)
texture = ExtResource("4_tre8k")

[node name="PainterImage" type="Sprite2D" parent="Canvas"]
position = Vector2(339, 223)
script = ExtResource("5_jxhjo")

[node name="UI" type="CanvasLayer" parent="."]
layer = 20000

[node name="MarginContainer2" type="MarginContainer" parent="UI"]
offset_left = 7.0
offset_top = 11.0
offset_right = 173.0
offset_bottom = 199.0

[node name="Panel" type="Panel" parent="UI/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uqbd1")

[node name="HSlider" type="HSlider" parent="UI/MarginContainer2/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 148.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="UI/MarginContainer2/Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 24.0
offset_right = 130.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 25
text = "Brush Size"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="UI/MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -24.0
offset_right = 67.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
columns = 5
script = ExtResource("9_60gon")

[node name="ColorRect" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2
color = Color(1, 0.53999996, 0.53999996, 1)

[node name="ColorRect2" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2
color = Color(1, 0.6685, 0.49, 1)

[node name="ColorRect3" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2
color = Color(1, 1, 0.6366402, 1)

[node name="ColorRect4" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2
color = Color(0.80946815, 1, 1, 1)

[node name="ColorRect5" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2
color = Color(0.81178766, 0.7172856, 1, 1)

[node name="ColorRect6" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect7" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect8" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect9" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect10" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect11" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect12" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect17" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect18" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect19" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect20" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect22" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect23" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect24" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect25" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect21" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect26" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect27" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect28" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="ColorRect29" type="ColorRect" parent="UI/MarginContainer2/Panel/GridContainer"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 2

[node name="CurrentColorRect" type="ColorRect" parent="UI/MarginContainer2/Panel"]
material = SubResource("ShaderMaterial_l3uwg")
custom_minimum_size = Vector2(18, 17)
layout_mode = 0
offset_left = 75.0
offset_top = 47.0
offset_right = 95.0
offset_bottom = 67.0
mouse_default_cursor_shape = 2

[node name="ColorPicker" type="ColorPicker" parent="UI/MarginContainer2/Panel"]
visible = false
layout_mode = 0
offset_left = 198.0
offset_top = -9.0
offset_right = 496.0
offset_bottom = 275.0
deferred_mode = true
picker_shape = 1
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -169.0
offset_right = -10.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="HELP" type="Button" parent="UI/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme = ExtResource("5_iev8n")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_bbk8y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_60gon")
theme_override_styles/hover = SubResource("StyleBoxTexture_juvvh")
text = "ADVICE"
script = ExtResource("9_1ubji")

[node name="CLEAR" type="Button" parent="UI/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme = ExtResource("5_iev8n")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_bbk8y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_60gon")
theme_override_styles/hover = SubResource("StyleBoxTexture_juvvh")
text = "CLEAR
"
script = ExtResource("14_673gn")

[node name="FINISH" type="Button" parent="UI/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme = ExtResource("5_iev8n")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_bbk8y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_60gon")
theme_override_styles/hover = SubResource("StyleBoxTexture_juvvh")
text = "FINISH"

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "10:20"
horizontal_alignment = 1

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -64.0
offset_right = 60.0
offset_bottom = -24.0
grow_vertical = 0

[node name="SHIFT" type="Sprite2D" parent="UI/Control"]
position = Vector2(-4, 43)
texture = ExtResource("15_1yep8")

[node name="GO BACK" type="RichTextLabel" parent="UI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 24.0
offset_right = 121.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 31
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[outline_size=2][outline_color=black]GO BACK[/outline_color][/outline_size]"
horizontal_alignment = 1

[node name="Sounds" type="Node" parent="."]

[node name="sfx" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_uqbd1")

[node name="sfx-eraser" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16_tncq5")
volume_db = -14.132

[node name="sfx-strokes-paint" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18_rgpq6")
volume_db = -0.684

[node name="sfx-strokes-paint2-large" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("19_bgm10")
volume_db = -0.684

[node name="sfx-undo-art" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("20_jtvaj")
volume_db = 0.634

[node name="sfx-click" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("21_ur4fy")

[node name="sfx-challenge-complete" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("21_kd7kd")

[node name="sfx-challenge-start" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("22_pvt6a")

[node name="sfx-timer-warning" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("23_pvt6a")

[node name="sfx-timer-tick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("23_y51fs")

[node name="Music" type="Node" parent="."]
script = ExtResource("21_joooq")

[node name="ow_outskirts" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("26_1yep8")

[node name="ow_junkyard" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("27_7wpjm")

[node name="town" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("27_y51fs")

[connection signal="value_changed" from="UI/MarginContainer2/Panel/HSlider" to="Canvas/PainterImage" method="_on_h_slider_value_changed"]
[connection signal="color_changed" from="UI/MarginContainer2/Panel/ColorPicker" to="UI/MarginContainer2/Panel/GridContainer" method="_on_color_picker_color_changed"]
